--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -150,6 +150,10 @@
 
     public void Update() => StateHasChanged();
 
+    /// <summary>
+    /// Changes the current users theme, and refeshes the current page.
+    /// </summary>
+    /// <param name="theme"></param>
     public void SetUserTheme(ApplicationTheme theme)
     {
         try
