--- a/BLAZAM/Shared/UI/AppModalContent.razor
+++ b/BLAZAM/Shared/UI/AppModalContent.razor
@@ -1,11 +1,13 @@
 ﻿@inherits DirectoryModelComponent
 
 @code {
-#nullable disable warnings
+    #nullable disable warnings
     [CascadingParameter] protected MudMessageBox Modal { get; set; }
     [Parameter]
     public EventCallback ModelChanged { get; set; }
-
+    /// <summary>
+    /// Closes the containing modal
+    /// </summary>
     protected void Close(){
         Modal.Close();
         InvokeAsync(StateHasChanged);
