--- a/BLAZAM/Shared/UI/Section.razor
+++ b/BLAZAM/Shared/UI/Section.razor
@@ -1,4 +1,4 @@
-﻿<MudPaper Class=@((FullWidth?"mud-width-full":"") + " section px-4 py-3")>
+﻿<MudPaper Elevation=2 Class=@((FullWidth?"mud-width-full":"") + " section px-4 py-3") Style="overflow:hidden; position:relative;">
     @if (SectionHeaderPosition == HeaderPosition.TopLeft || SectionHeaderPosition == HeaderPosition.TopRight)
     {
         <MudElement Class="section-title-container">
